# beartrak-search

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  REFACTORING_SUMMARY.md  database.py  docker-compose.yml  fly.toml  main.py  models.py  mypy.ini  pyproject.toml  type-check.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  fast-ci.yml  main-ci.yml
docs/: COLD_START_OPTIMIZATION.md  FLY_DEPLOYMENT.md  README.md
tests/: __init__.py  conftest.py  test_api_legacy.py  test_app.py  test_crud_api.py  test_crud_workflow.py  test_database_crud.py  test_health.py  test_integration.py  test_search.py  test_search_logic.py  test_search_logic_new.py
